<resources>
    <string name="app_name">StoryTellApp</string>
    <string name="edit_story">Curate Story</string>
    <string name="button_send">Submit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_story">My Story</string>
    <string name="story">Story</string>
    <string name="storyTold">Story Told By...</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="tell">Tell!</string>
    <string name="beat">What\'s your story?</string>
    <string name="longGist">Best realities pass too easy..Hard ones takes a day too! Appreciate Times...</string>
    <string name="content">Curate your Story</string>
    <string name="action_categories">Categories</string>

    <color name="orange">#FFa500</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <string name="title_activity_categories_grid">CategoriesGrid</string>

    <!-- string name="hello_world">Hello world!</string -->
</resources>
