<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:storytellapp="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        storytellapp:showAsAction="ifRoom" />

    <!-- Settings -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        storytellapp:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_Categories"
        android:orderInCategory="102"
        android:title="@string/action_categories"
        android:onClick="actionCategoryClickHandler"
        storytellapp:showAsAction="ifRoom" />
</menu>