<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_premier"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MyActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="400dp"
        android:layout_height="360dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
      />


    <!--<EditText-->
    <!--android:id="@+id/editText"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignBaseline="@+id/button2"-->
    <!--android:layout_below="@+id/button2"-->
    <!--android:layout_toEndOf="@+id/button2"-->
    <!--android:layout_toLeftOf="@+id/button2"-->
    <!--android:layout_toRightOf="@+id/textView2"-->
    <!--android:layout_toStartOf="@+id/textView2"-->
    <!--android:text="Curate Story" />-->

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button2"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/content" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:text="@string/longGist"
            android:textAlignment="gravity"/>
    </ScrollView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/videoView"
        android:gravity="center"
        android:text="@string/story"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textSize="32sp">

    </TextView>


</RelativeLayout>
